Added corrections