@@ -5,14 +5,12 @@ import com.search.wiki.controller.dto.UserDTO;
 import com.search.wiki.model.Country;
 import com.search.wiki.model.User;
 import com.search.wiki.service.UserService;
-import org.hibernate.Hibernate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/users")
@@ -60,7 +58,7 @@ public class UserController {
 
                     return userDTO;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
